# note-type-generator

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: args.rs  config.rs  files.rs  main.rs  template_error.rs  templates.rs
src/config/: mod.rs  tests.rs
src/templates/: mod.rs  tests.rs
src/templates/error/: mod.rs  tests.rs
tests/: cmdline.rs  e2e.rs  template_errors.rs
