[package]
name = "note-type-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
genanki-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
regex = "1"
clap = { version = "4.5.15", features = ["derive"] }

[dev-dependencies]
indoc = "2"
assert_cmd = "2.0"
tempfile = "3.3"
